Added new directory /customviews for easier upgrading
Removed serveral files for easier upgrading
Moved admin area from web directory to internal routing
Moved markup from adminhome to twig template
Added tool to encrypt admin passwords to /_admin/index.html
If there are no admin users set in config.scrts.yml, you can access /_admin/index.html without authenticating to use the encryption tool

2.1.0
now works with hosting at 1&1 and other mass hosters
pageadmin: removed admin from list of options for page subnav
moved admin navi from config to init
useradmin.twig was renamed to customeradmin.twig, userhome.twig was renamed to customerhome.twig
pageadmin/add page: added check for reserved path "/_"
moved all files from web/_misc/ to internal routing
simplified the update-cart script
if no items are available on itemoverview-page, display message
fixed: item search
added new page type "shorturl", implementation
replaced include with require
replaced calls to \HaaseIT\Tools\cED() with filter_ver() or filter_input()
replaced calls to \HaaseIT\Tools\validateEmail($sEmail) with  filter_var($sEmail, FILTER_VALIDATE_EMAIL)
changed required version of haaseit/toolbox to 1.2.3, wich has validateEmail() removed
added checks for php extension filter in web/_admin/index.php
updated readme.md to mention needed php extension filter
fix: base.twig: no content was shown if enable_shop == false
change: init.php: session is now only started when enable_module_customer == true, not needed if this is false
renamed class item to items
added new field for items: weight
changed itemadmin-forms, textcat-forms to use purecss framework

2.0.6
text from textcats can now be deleted, haaseit/toolbox 1.2.2 is now required.

2.0.5
itemgroups are now back, template is still very basic
fixed wrong include paths in some files in web/_misc directory
fixed vat_disable not working

2.0.3 auf 2.0.4dev
config.shop.php changed to config.shop.yml
config.core.php changed to config.core.yml