@@ -195,6 +195,9 @@ if ($_SERVER["PHP_SELF"] == '/app.php') {
             'path_templatecache' => realpath(PATH_TEMPLATECACHE),
             'path_templatecache_exists' => file_exists(PATH_TEMPLATECACHE),
             'path_templatecache_writable' => is_writable(PATH_TEMPLATECACHE),
+            'path_purifiercache' => realpath(PATH_PURIFIERCACHE),
+            'path_purifiercache_exists' => file_exists(PATH_PURIFIERCACHE),
+            'path_purifiercache_writable' => is_writable(PATH_PURIFIERCACHE),
             'enable_module_shop' => $C["enable_module_shop"],
             'path_logs' => realpath(PATH_LOGS),
             'path_logs_exists' => file_exists(PATH_LOGS),
