@@ -72,10 +72,18 @@ if (!isset($_GET["action"])) {
         if (isset($_REQUEST["page_key"]) && $Ptoedit = new \HaaseIT\HCSF\UserPage($C, $sLang, $DB, $_REQUEST["page_key"], true)) {
             if (isset($_REQUEST["action_a"]) && $_REQUEST["action_a"] == 'true') {
 
+                $purifier_config = HTMLPurifier_Config::createDefault();
+                $purifier_config->set('Core.Encoding', 'UTF-8');
+                $purifier_config->set('Cache.SerializerPath', PATH_PURIFIERCACHE);
+                // Cache.SerializerPath
+                $purifier = new HTMLPurifier($purifier_config);
+                //$clean_html = $purifier->purify($dirty_html);
+
                 $Ptoedit->cb_pagetype = $_POST['page_type'];
                 $Ptoedit->cb_group = $_POST['page_group'];
                 $Ptoedit->cb_pageconfig = $_POST['page_config'];
                 $Ptoedit->cb_subnav = $_POST['page_subnav'];
+                $Ptoedit->purifier = $purifier;
                 $bBaseupdated = $Ptoedit->write();
 
                 if ($Ptoedit->oPayload->cl_id != NULL) {
@@ -83,9 +91,11 @@ if (!isset($_GET["action"])) {
                     $Ptoedit->oPayload->cl_title = $_POST['page_title'];
                     $Ptoedit->oPayload->cl_description = $_POST['page_description'];
                     $Ptoedit->oPayload->cl_keywords = $_POST['page_keywords'];
+                    $Ptoedit->oPayload->purifier = $purifier;
                     $bPayloadupdated = $Ptoedit->oPayload->write();
                 }
 
+                $Ptoedit = new \HaaseIT\HCSF\UserPage($C, $sLang, $DB, $_REQUEST["page_key"], true);
                 $P->cb_customdata["updated"] = true;
             }
             $P->cb_customdata["page"] = $Ptoedit;
