@@ -9,6 +9,8 @@ Moved admin area from web directory to internal routing
 Moved markup from adminhome to twig template
 Added tool to encrypt admin passwords to /_admin/index.html
 If there are no admin users set in config.scrts.yml, you can access /_admin/index.html without authenticating to use the encryption tool
+Moved templatecache to new central cache directory
+Now uses HTMLPurifier to sanitize input
 
 2.1.0
 now works with hosting at 1&1 and other mass hosters
